--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,21 @@
 [tool.poetry]
 name = "ioc_finder"
-version = "0.1.3"
+version = "0.1.4"
 description = "Quick and dirty method to search for filenames that match IOCs if hashes are not yet available"
 authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 colorama = "^0.4.5"
 tqdm = "^4.64.0"
 rich = "^13.3.4"
+
+[tool.poetry.extras]
+lint = [ "pylint",]
+
+[tool.poetry.dependencies.pylint]
+version = "*"
+optional = true
 
 [tool.poetry.dev-dependencies]
 
